# rs_weather_station

./: .gitignore  Cargo.toml  app_config.toml
infrastructure/: build.bat  deploy.bat  rollback.bat
src/: config.rs  main.rs  weather.rs
