[package]
name = "rs_weather_station"
version = "0.1.0"
authors = ["Declan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
chrono = "0.4"
bitvec = "1.0"
async-std = "1.12"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
lazy_static = "1.4"
influxdb = { version = "0.5", features = ["derive"] }
